--- a/passbolt_stack/.env
+++ b/passbolt_stack/.env
@@ -1,13 +1,10 @@
-# Base de données
-DB_ROOT_PASSWORD=Passer
-DB_PASSWORD=Passer
+# Database
+DB_ROOT_PASSWORD=your_secure_root_db_password_here
+DB_PASSWORD=your_secure_db_password_here
 
 # Gmail
-GMAIL_EMAIL=ismael.mouloungui@groupebatimat.com
-GMAIL_APP_PASSWORD=Passer
+GMAIL_EMAIL=your_email@gmail.com
+GMAIL_APP_PASSWORD=your_app_specific_password_here
 
-# Domaine
-DOMAIN=passbolt.local
-
-# NTP
-NTP_SERVER=pool.ntp.org
+# Domain
+DOMAIN=passbolt.your-domain.com
